syntax = "proto3";

package v1;

option go_package = "pkg/proto/v1";

// Service definition
service ProductService {
  rpc GetProductByID (GetProductRequest) returns (ProductResponse);
}

// Request message
message GetProductRequest {
  string id = 1;
}

// Response message
message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}
